# ssat

./: .gitignore  README.md  pyproject.toml  script.py
examples/: bayesian_example.ipynb  bayesian_example.py  compare_models.ipynb  compare_models.py
ssat/app/: NEXT_PHASES.md  README.md  __init__.py  main.py  run.py  test_app.py
ssat/app/components/: __init__.py  cards.py  plots.py  sidebar.py  tabs.py
ssat/app/config/: __init__.py  app_config.py  ui_config.py
ssat/app/core/: __init__.py  model_training.py
ssat/app/pages/: __init__.py  data.py  docs.py  models.py  overview.py  results.py
ssat/app/utils/: __init__.py  ui_helpers.py
ssat/bayesian/: __init__.py  base_model.py  base_predictive_model.py  elo_rating.py  hierarchical_base.py  nbinom.py  nbinom_hierachical.py  nbinomial_models.py  poisson.py  poisson_hierarchical.py  poisson_models.py  predictive_models.py  skellam.py  skellam_hierachichal.py  skellam_hierachichal_dlc.py  skellam_models.py  skellam_zero.py
ssat/bayesian/stan_files/: nbinom.stan  (+11 more)
ssat/benchmark/: model_benchmark.py  model_best_fit_goals.py  model_best_fit_spread.py
ssat/data/: __init__.py  get_data.py  sample_handball_match_data.parquet  sample_handball_odds_data.parquet
ssat/frequentist/: __init__.py  base_model.py  bradley_terry_model.py  gssd_model.py  prp_model.py  toor_model.py  zsd_model.py
ssat/metrics/: __init__.py  metrics.py
ssat/notebooks/: bayesian_example.ipynb  example.py  frequentist_example.ipynb  frequentist_example.py
ssat/trading/: get_positions.py
ssat/utils/: __init__.py  skellam_rng.py  weights.py
(+11 files in other folders)
