[project]
name = "ssat"
version = "0.0.5"
description = "SSAT: Statistical Sports Analysis Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["sports", "statistics", "analysis", "modeling", "prediction"]
authors = [{ name = "Bjørn Aagaard", email = "aagaardbs@gmail.com" }]

# Core dependencies required for basic functionality
dependencies = [
    "arviz>=0.20.0",
    "cmdstanpy>=1.2.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "panel>=1.7.1",
    "panel-graphic-walker[kernel]>=0.6.4",
    "panel-material-ui>=0.2.0",
    "plotly>=5.0.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "watchfiles>=1.1.0",
]

[project.scripts]
app = "ssat.app:main"

[project.urls]
Repository = "https://github.com/bjrnsa/ssat"
Issues = "https://github.com/bjrnsa/ssat/issues"
Documentation = "https://github.com/bjrnsa/ssat/wiki"
Changelog = "https://github.com/bjrnsa/ssat/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "D", # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
